# Quant_project_equity

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/project1/: bl_allocation.csv  bl_omega.csv  bl_pick_matrix.csv  bl_posterior_covariance.csv  bl_posterior_returns.csv  bl_return_views.csv  bl_shrinkage_covariance.csv  hmm_emission_table.csv  hmm_forward_252d_regime_probability.csv  hmm_macro_daily_zscore.csv  hmm_regime_probabilities.csv  hmm_transition_matrix.csv  monte_carlo_summary.csv  monte_carlo_weights.csv  optimizer_allocations.csv  optimizer_summary.csv  project1_prices.csv  rolling_backtest_cumulative_returns.csv  rolling_backtest_daily_cumulative_returns.csv  rolling_backtest_daily_values.csv  rolling_backtest_returns.csv  rolling_backtest_summary.csv  rolling_backtest_values.csv  rolling_bl_weight_history.csv
data/processed/project3/: asset_factor_exposure_interpretation.csv  asset_risk_contribution.csv  base_factor_purge_beta.csv  base_factor_standardized_data.csv  custom_factor_purge_beta.csv  custom_factor_raw_data.csv  custom_factor_standardized_data.csv  factor_correlation_matrix.csv  factor_covariance.csv  factor_exposures.csv  factor_group_risk_contribution.csv  factor_model_alpha.csv  factor_model_covariance.csv  factor_raw_data.csv  factor_risk_contribution.csv  factor_vs_specific_risk.csv  loose_factor_covariance.csv  loose_specific_covariance.csv  portfolio_factor_exposure.csv  portfolio_risk_summary.csv  predicted_vs_realized_volatility.csv  purged_base_factors.csv  purged_custom_macro_shocks.csv  sample_covariance.csv  (+14 more)
(+25 files in other folders)
