[project]
name = "equity-quant-project"
version = "0.1.0"
description = "Regime-aware equity portfolio research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "yfinance>=0.2.40",
    "pyportfolioopt>=1.5",
    "riskfolio-lib>=7.0",
    "hmmlearn>=0.3",
    "cvxpy>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]
